@@ -74,6 +74,15 @@ start() {
     --log-opt max-file=9 \
     docker.baozou.com/baozou/spark:1.5-py3.4 \
     spark-submit --master spark://${SparkMasterURL} \
+    --conf spark.executor.logs.rolling.maxRetainedFiles=3 \
+    --conf spark.executor.logs.rolling.maxSize=10000000 \
+    --conf spark.executor.logs.rolling.strategy=size \
+    --conf "spark.serializer=org.apache.spark.serializer.KryoSerializer" \
+    --conf "spark.cleaner.ttl=300" \
+    --conf "spark.executor.extraJavaOptions=-XX:+UseConcMarkSweepGC" \
+    --driver-java-options "-XX:+UseConcMarkSweepGC" \
+    --driver-memory 2G \
+    --files /data/KSE/log4j.properties \
     --jars /opt/spark/jars/spark-streaming-kafka-assembly.jar,/opt/spark/jars/elasticsearch-hadoop.jar \
     --py-files /data/KSE/adapters.py /data/KSE/submit.py kafka ${ZooKeeperURL} bzfun-app-log ${elasticsearchURL} \
     2>&1
